@@ -921,7 +921,7 @@ runAbsoluteCN <- function(normal.coverage.file = NULL,
                       ov, results[[i]]$purity, test.num.copy, results[[i]]$C.likelihood, 
                       results[[i]]$C.posterior$ML.C,
                       results[[i]]$C.posterior$Opt.C,
-                      median.C = rep(results[[i]]$seg$C, results[[i]]$seg$num.mark),
+                      median.C = median(rep(results[[i]]$seg$C, results[[i]]$seg$num.mark)),
                       snv.model = model, prior.somatic, mapping.bias,
                       snv.lr, sampleid, cont.rate = cont.rate, prior.K = prior.K,
                       max.coverage.vcf = max.coverage.vcf, non.clonal.M = non.clonal.M,
