@@ -15,7 +15,10 @@ option_list <- list(
         help="Interval file as generated by IntervalFile.R"),
     make_option(c("--method"), action="store", 
         default=formals(PureCN::correctCoverageBias)$method[[2]], 
-        help="Include off-target regions [default %default]"),
+        help="GC-normalization method [default %default]"),
+    make_option(c("--keepduplicates"), action="store_true", 
+        default=formals(PureCN::calculateBamCoverageByInterval)$keep.duplicates, 
+        help="Count reads marked as duplicates [default %default]"),
     make_option(c("--outdir"), action="store", type="character", default=NULL,
         help="Output directory to which results should be written"),
     make_option(c("--cpu"), action="store", type="integer", default=1,
@@ -64,7 +67,7 @@ gc.gene.file <- normalizePath(gc.gene.file, mustWork=TRUE)
 }
 
 getCoverageBams <- function(bamFiles, indexFiles, outdir, gc.gene.file, 
-    force=FALSE, cpu=1) {
+    force=FALSE, cpu=1, keep.duplicates=FALSE) {
 
     bamFiles <- bamFiles
     indexFiles <- indexFiles
@@ -94,7 +97,7 @@ getCoverageBams <- function(bamFiles, indexFiles, outdir, gc.gene.file,
         } else {
             PureCN::calculateBamCoverageByInterval(bam.file=bam.file, 
                 interval.file=gc.gene.file, output.file=output.file,
-                index.file=index.file)
+                index.file=index.file, keep.duplicates=keep.duplicates)
         }
         output.file
     }
@@ -134,7 +137,7 @@ if (!is.null(bam.file)) {
     }    
 
     coverageFiles <- getCoverageBams(bamFiles, indexFiles, outdir, 
-        gc.gene.file, force, opt$cpu) 
+        gc.gene.file, force, opt$cpu, opt$keepduplicates) 
 
 }
 
